# llama.cpp

./: .gitignore  CLAUDE.md
tools/: CMakeLists.txt
tools/moe-inspector/: CMakeLists.txt  PLAN.md  analyze.py  collect.sh  main.cpp  moe_capture.cpp  moe_capture.h  requirements.txt
tools/moe-inspector/data/: code_prompts.txt  nl_prompts.txt
tools/moe-inspector/tests/: test_capture.py
